# ida

./: .env.example  .gitignore  Justfile  MAGIC_API_test.py  MAGIC_plugin_entry.py  MAGIC_widget.py  README.md  bitbucket-pipelines.yml  checksum  install-ida.sh  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: gha_create_release.yml
MAGIC/: .env.example  MAGIC_API_test.py  MAGIC_form.py  MAGIC_hooks.py  MAGIC_plugin.py  MAGIC_sync_scroll.py  __init__.py  requirements.txt
MAGIC/IDA_interface/: MAGIC_sync_scroll.py  __init__.py  procedureTree.py
MAGIC/unknowncyber_interface/: _filesTable.py
docker/: Dockerfile  Dockerfile.dockerignore
plugins/: MAGIC_plugin_entry.py  magic_plugin_entry.py
plugins/MAGIC/: MAGIC_hooks.py  __init__.py
plugins/MAGIC/IDA_interface/: __init__.py  _procTree.py
plugins/MAGIC/unknowncyber_interface/: __init__.py  _filesTable.py
plugins/idamagic/: .env  __init__.py  api.py  helpers.py  hooks.py  layouts.py  references.py  widgets.py
plugins/idamagic/IDA_interface/: __init__.py  _procTree.py
plugins/idamagic/main_interface/: __init__.py
plugins/idamagic/unknowncyber_interface/: __init__.py  _filesTable.py
plugins/idamagic/widgets/buttons/: pagination.py
plugins/idamagic/widgets/collection_elements/: list_items.py  misc_nodes.py  table_items.py  tree_nodes.py
plugins/idamagic/widgets/collections/: lists.py  tables.py  trees.py
plugins/idamagic/widgets/displays/: center_display.py
plugins/idamagic/widgets/popups/: popups.py
plugins/idamagic/widgets/tabs/: tabs.py
