[metadata]
name = ida-plugins
version = 0.1.0
author = Unknown Cyber
author_email = webmaster@unknowncyber.com
description =
    Copyright (c) 2023 Unknown Cyber
    All rights reserved.
long_description = file: README.md
license = Apache
url = https://bitbucket.org/unknowncyber/ida-plugins/
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =plugins
packages=find:
include_package_data = True
install_requires =
    cythereal_magic == 0.0.19
    python-dotenv >= 0.21.1
    networkx[default] == 2.6.3
    sark @ git+https://github.com/tmr232/Sark.git#egg=Sark

[options.packages.find]
where=plugins

[options.extras_require]
dev =
    black >= 23.1.0
    flake8-docstrings >= 1.7.0
    pylama[toml] >= 8.4.1
