[metadata]
name = uc-ida-plugin
version = 1.0.0
author = Unknown Cyber
author_email = support@unknowncyber.com
description =
    Copyright (c) 2023 Unknown Cyber
    All rights reserved.
license = Apache
url = https://github.com/Unknown-Cyber-Inc/ida/
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =plugins
packages=find:
include_package_data = True
install_requires =
    cythereal_magic == 2.0.3
    python-dotenv >= 0.21.1
    networkx[default] == 2.6.3
    sark @ git+https://github.com/tmr232/Sark.git@b1bd8fbd079ca6c5a9e01150c48e7d5283b670a8

[options.packages.find]
where=plugins

[options.extras_require]
dev =
    black >= 23.1.0
    flake8-docstrings >= 1.7.0
    pylama[toml] >= 8.4.1
